// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`push instruction compiler > element max prefix (^) > pushes max finite value for float32 1`] = `
{
  "byteCode": [
    67,
    255,
    255,
    127,
    127,
  ],
  "stack": [
    {
      "isInteger": false,
      "isNonZero": true,
    },
  ],
}
`;

exports[`push instruction compiler > element max prefix (^) > pushes max finite value for float64 1`] = `
{
  "byteCode": [
    68,
    255,
    255,
    255,
    255,
    255,
    255,
    239,
    127,
  ],
  "stack": [
    {
      "isFloat64": true,
      "isInteger": false,
      "isNonZero": true,
    },
  ],
}
`;

exports[`push instruction compiler > element max prefix (^) > pushes max value for int8 1`] = `
{
  "byteCode": [
    65,
    255,
    0,
  ],
  "stack": [
    {
      "isInteger": true,
      "isNonZero": true,
    },
  ],
}
`;

exports[`push instruction compiler > element max prefix (^) > pushes max value for int16 1`] = `
{
  "byteCode": [
    65,
    255,
    255,
    1,
  ],
  "stack": [
    {
      "isInteger": true,
      "isNonZero": true,
    },
  ],
}
`;

exports[`push instruction compiler > element max prefix (^) > pushes max value for int32 1`] = `
{
  "byteCode": [
    65,
    255,
    255,
    255,
    255,
    7,
  ],
  "stack": [
    {
      "isInteger": true,
      "isNonZero": true,
    },
  ],
}
`;

exports[`push instruction compiler > element min prefix (!) > pushes lowest finite value for float32 1`] = `
{
  "byteCode": [
    67,
    255,
    255,
    127,
    255,
  ],
  "stack": [
    {
      "isInteger": false,
      "isNonZero": true,
    },
  ],
}
`;

exports[`push instruction compiler > element min prefix (!) > pushes lowest finite value for float64 1`] = `
{
  "byteCode": [
    68,
    255,
    255,
    255,
    255,
    255,
    255,
    239,
    255,
  ],
  "stack": [
    {
      "isFloat64": true,
      "isInteger": false,
      "isNonZero": true,
    },
  ],
}
`;

exports[`push instruction compiler > element min prefix (!) > pushes min value for int8 1`] = `
{
  "byteCode": [
    65,
    128,
    127,
  ],
  "stack": [
    {
      "isInteger": true,
      "isNonZero": true,
    },
  ],
}
`;

exports[`push instruction compiler > element min prefix (!) > pushes min value for int16 1`] = `
{
  "byteCode": [
    65,
    128,
    128,
    126,
  ],
  "stack": [
    {
      "isInteger": true,
      "isNonZero": true,
    },
  ],
}
`;

exports[`push instruction compiler > element min prefix (!) > pushes min value for int32 1`] = `
{
  "byteCode": [
    65,
    128,
    128,
    128,
    128,
    120,
  ],
  "stack": [
    {
      "isInteger": true,
      "isNonZero": true,
    },
  ],
}
`;

exports[`push instruction compiler > float64 memory push > pushes a float64 memory identifier using f64.load 1`] = `
{
  "byteCode": [
    65,
    0,
    43,
    3,
    0,
  ],
  "stack": [
    {
      "isFloat64": true,
      "isInteger": false,
      "isNonZero": false,
    },
  ],
}
`;

exports[`push instruction compiler > pushes a constant value 1`] = `
{
  "byteCode": [
    65,
    42,
  ],
  "stack": [
    {
      "isInteger": true,
      "isNonZero": true,
    },
  ],
}
`;

exports[`push instruction compiler > pushes a literal value 1`] = `
{
  "byteCode": [
    65,
    5,
  ],
  "stack": [
    {
      "isInteger": true,
      "isNonZero": true,
    },
  ],
}
`;
